--- a/admin/styles/sponsoren.css
+++ b/admin/styles/sponsoren.css
@@ -30,10 +30,10 @@
 	margin: 0 9px 5px 9px;
 	height: 70px;
 
-	@media screen and (max-width: 600px) {
+	@media screen and (max-width: 800px) {
 		height: 60px;
 	}
-	@media screen and (max-width: 500px) {
+	@media screen and (max-width: 600px) {
 		height: 50px;
 	}
 	@media screen and (max-width: 400px) {
